--- a/templates/question.html
+++ b/templates/question.html
@@ -1,262 +1,117 @@
-<!doctype html>
-<html lang="en" class="h-100">
-  <head>
+{% extends 'layouts/base.html' %}
 
-    <!-- Bootstrap core CSS -->
-<link href="../static/css/bootstrap.min.css" rel="stylesheet" >
-<script src="../static/js/bootstrap.bundle.min.js" ></script>
-
-    <style>
-      .bd-placeholder-img {
-        font-size: 1.125rem;
-        text-anchor: middle;
-        -webkit-user-select: none;
-        -moz-user-select: none;
-        user-select: none;
-      }
-
-      @media (min-width: 768px) {
-        .bd-placeholder-img-lg {
-          font-size: 3.5rem;
-        }
-      }
-    </style>
+{% block content %}
+{% include 'components/question-item.html' %}
 
 
-    <!-- Custom styles for this template -->
-    <link href="../static/css/main.css" rel="stylesheet">
-  </head>
-  <body class="d-flex flex-column h-100">
-
-<header>
-  <!-- Fixed navbar -->
-  <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="#">AskPupkin</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-
-      <div class="collapse navbar-collapse" id="navbarCollapse">
-        <form class="d-flex">
-          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-
-
-          <div class="right-area">
-            <button class="btn btn-outline-success" type="submit">ASK!</button>
-
-            <div class="avatar-image">
-              <img src="../static/img/fiona.jpeg" alt ="" class="avatar-image">
-            </div>
-
-            <div class="text-autorize">
-              <div class="shapka">
-                <h class="shapka" >Dr. Pepper</h>
-              </div>
-              <div class="shapka">
-               <div class="shapka">
-                 <div class="row-6">
-                    <a href="" class="shapka_1">setting</a>
-                  </div>
-                  <div class="row-6">
-                    <a  href="" class="shapka">log_out</a>
-                  </div>
+         <div class="row question-main">
+            <div class="col-3">
+              <img src="{% static '/img/fire.png' %}" alt="" class="question-image">
+                  <div class="buttons">
+                      <button class="image-button" onclick="like(1)">
+                        <img src="{% static '/img/like.png' %}" alt="like" class="like-image">
+                      </button>
+                      <div class="counter">
+                        <p id="count1">0</p>
+                      </div>
+                      <button class="image-button" onclick="dislike(1)">
+                        <img src="{% static '/img/dislike.png' %}" alt="like" class="like-image">
+                      </button>
                 </div>
               </div>
+              <div class="col-9">
+             <div class="question-title"><a href ="">Just like fire.</a></div>
+             <div class="question-text">Since ancient times, people have used fire in
+               the household for cooking and heating their homes. Nowadays, fire is
+               also used in many industries. Without fire, human life is impossible.
+               But fire is creative only if safety rules are followed. Otherwise, a fire
+               may occur. Especially dangerous are forest fires, which spread with
+               great speed, and fires at industrial enterprises. Therefore, fire should
+               be handled very carefully. If it is even more or less clear with gases
+               (the gas burns, is oxidized by the gas + the required temperature),
+               then plasma is a partially or fully ionized gas formed from neutral atoms
+               (or molecules) and charged particles (ions and electrons).</div>
+             <span class="question-text">Tags:</span>
+             <span class="tags-question">
+                   <span class="badge bg-primary">Python</span>
+                   <span class="badge bg-primary">HTML</span>
+                   <span class="badge bg-primary">CSS</span>
+                   <span class="badge bg-primary">Java Script</span>
+             </span>
            </div>
-          </div>
-
-
-
-
-
-
-        </form>
-      </div>
-
-
-
-
-
-    </div>
-  </nav>
-</header>
-
-<!-- Begin page content -->
-<main class="flex-shrink-0">
-  <div class="container">
-     <div class="row">
-       <div class="col-8">
-         <div class="question1">
+            </div>
+         <div class="row question">
            <div class="col-3">
-             <img src="../static/img/fiona.jpeg" alt ="" class="question-image">
-             <div class="counter">
-                <span class="input-group-text" >6</span>
-                <div class="double-button">
-                  <div class="like">
-                     <button class="like-dislike" >like!</button>
-                  </div>
-                  <div class="double-button">
-                    <button class="like-dislike" >dislike!</button>
-                  </div>
-                </div>
-             </div>
-
-
+             <img src="{% static '/img/grec.png' %}" alt ="" class="question-image">
+             <span class="buttons">
+                      <button class="image-button" onclick="like(2)">
+                        <img src="{% static '/img/like.png' %}" alt="like" class="like-image">
+                      </button>
+                      <span class="counter">
+                        <p id="count2">0</p>
+                      </span>
+                      <button class="image-button" onclick="dislike(2)">
+                        <img src="{% static '/img/dislike.png' %}" alt="like" class="like-image">
+                      </button>
+             </span>
            </div>
            <div class="col-9">
-             <div class="question-title"><a href ="">First question.</a></div>
-             <div class="question-text">Lorem Ipsum is simply dummy text of the printing
-               and typesetting industry.
-               Lorem Ipsum has been the industry's standard dummy text ever
-               since the 1500s, when an unknown printer took a galley of type
-               and scrambled it to make a type specimen book.
-               It has survived not only five centuries, but also the leap
-               into
-               electronic typesetting, remaining essentially unchanged.
-               It was popularised in the 1960s with the release of
-               Letraset sheets containing Lorem Ipsum passages, and more recently
-               with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
-             </div>
-
-             <div class="black-jack">
-               <a  href="">Answer (3)</a>
-               <div class="black-jack2">
-                 <h  href="">Tags: </h>
-               </div>
-
-               <div class="answer">
-                 <a  href="">black-jack</a>
-               </div>
-
-               <div class="answer">
-                 <a  href="">bender</a>
-               </div>
-             </div>
+             <div class="question-title"><a href ="">The interesting hystory.</a></div>
+             <div class="question-text">The theory that all objects are made of atoms was
+               first described by the Greek philosophers Democritus and Leucippus.
+               But the modern scientific approach to the structure of matter was first
+               developed by Thales of Miletus and his students. The Latin alphabet originated
+               in ancient Greece, during the Phoenician colonization in the 8th century BC.
+               Early works in the field of physics and engineering were written by Archimedes
+               in the Greek colony in Sicily - Syracuse, as well as many other scientists.
+               Mainland Greece is located on the Balkan Peninsula and is washed by the Mediterranean Sea,
+               which flows into the Ionian Sea in the west and the Aegean Sea in the east.</div>
+             <table>
+                <tr>
+                    <td><input type="checkbox"></td>
+                    <th>Correct!</th>
+                </tr>
+            </table>
            </div>
          </div>
-         <div class="question2">
-           <div class="question3">
-             <div class="col-3">
-             <img src="../static/img/fiona.jpeg" alt ="" class="question-image">
-             <div class="counter">
-                <span class="input-group-text" >6</span>
-                <div class="double-button">
-                  <div class="like">
-                     <button class="like-dislike" >like!</button>
-                  </div>
-                  <div class="double-button">
-                    <button class="like-dislike" >dislike!</button>
-                  </div>
-                </div>
-             </div>
-
-
+         <div class="row question">
+           <div class="col-3">
+             <img src="{% static '/img/dog.png' %}" alt ="" class="question-image">
+             <span class="buttons">
+                      <button class="image-button" onclick="like(3)">
+                        <img src="{% static '/img/like.png' %}" alt="like" class="like-image">
+                      </button>
+                      <span class="counter">
+                        <p id="count3">0</p>
+                      </span>
+                      <button class="image-button" onclick="dislike(3)">
+                        <img src="{% static '/img/dislike.png' %}" alt="like" class="like-image">
+                      </button>
+             </span>
            </div>
            <div class="col-9">
-             <div class="question-text">Lorem Ipsum is simply dummy text of the printing
-               and typesetting industry.
-               Lorem Ipsum has been the industry's standard dummy text ever
-               since the 1500s, when an unknown printer took a galley of type
-               and scrambled it to make a type specimen book.
-               It has survived not only five centuries, but also the leap
-               into
-               electronic typesetting, remaining essentially unchanged.
-               It was popularised in the 1960s with the release of
-               Letraset sheets containing Lorem Ipsum passages, and more recently
-               with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
-             </div>
-             <div class="form-check">
-               <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" checked style="margin-top:20px;">
-               <label class="form-check-label" for="flexCheckChecked" style="margin-top:16px;">
-                 Correct!
-               </label>
-             </div>
-           </div>
-           </div>
-           <div class="question3">
-             <div class="col-3">
-             <img src="../static/img/fiona.jpeg" alt ="" class="question-image">
-             <div class="counter">
-                <span class="input-group-text" >6</span>
-                <div class="double-button">
-                  <div class="like">
-                     <button class="like-dislike" >like!</button>
-                  </div>
-                  <div class="double-button">
-                    <button class="like-dislike" >dislike!</button>
-                  </div>
-                </div>
-             </div>
-
-
-           </div>
-           <div class="col-9">
-             <div class="question-text">Lorem Ipsum is simply dummy text of the printing
-               and typesetting industry.
-               Lorem Ipsum has been the industry's standard dummy text ever
-               since the 1500s, when an unknown printer took a galley of type
-               and scrambled it to make a type specimen book.
-               It has survived not only five centuries, but also the leap
-               into
-               electronic typesetting, remaining essentially unchanged.
-               It was popularised in the 1960s with the release of
-               Letraset sheets containing Lorem Ipsum passages, and more recently
-               with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
-             </div>
-             <div class="form-check">
-              <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault1" style="margin-top:20px;">
-                <label class="form-check-label" for="flexCheckDefault1" style="margin-top:16px;">
-                 Correct!
-               </label>
-            </div>
-           </div>
+             <div class="question-title"><a href ="">I'm so tired!</a></div>
+             <div class="question-text">Motivation is what gets you to a goal, what keeps you
+               going when things get tough, the reason you get up early to exercise or work
+               late to finish a project. More often than not, positive motivation works better —
+               if you really want something, you'll do a much better job than if you're trying
+               to avoid an undesirable scenario. Thus, motivation is the desire to achieve something.
+               Sometimes you don't want to get up early and feel very sleepy, but if you have
+               a reason to sincerely want to get up early, you jump out of bed with excitement.
+               This type of motivation works best.</div>
+             <table>
+                <tr>
+                    <td><input type="checkbox"></td>
+                    <th>Correct!</th>
+                </tr>
+            </table>
            </div>
          </div>
-         <textarea class="label3" placeholder="Enter your answer here.."></textarea>
-         <button class="answer2" >Answer</button>
-
+         <label for="comment" class="answer-ask">Enter your answer hear:</label>
+         <form action="/submit_form" method="post">
+            <textarea id="comment" name="comment" rows="14" cols="102"></textarea>
+            <button class="butt-ans" type="submit">Answer</button>
+          </form>
        </div>
-       <div class="col-4">
-         <div class="row">
-           <h2>Popular tags</h2>
-           <div class="tags">
-             <span class="badge bg-primary">Python</span>
-             <span class="badge bg-secondary">CSS</span>
-             <span class="badge bg-success">Voloshin</span>
-             <span class="badge bg-danger">Django</span>
-             <span class="badge bg-dark">VK</span>
-           </div>
-           <br/>
-           <h2>Best members</h2>
-           <UL class="list-group" style = " margin-left: 15px; max-width:150px">
-             <li class="list-group-item"><a href=""></a>Mr. Freeman</li>
-             <li class="list-group-item"><a href=""></a>Dr. House</li>
-             <li class="list-group-item"><a href=""></a>Bender</li>
-             <li class="list-group-item"><a href=""></a>Queen Victoria</li>
-             <li class="list-group-item"><a href=""></a>V. Pupkin</li>
-           </UL>
-         </div>
-       </div>
-     </div>
 
-
-
-
-
-
-  </div>
-</main>
-
-<footer class="footer mt-auto py-3 bg-light">
-  <div class="container">
-    <span class="text-muted">Homework of Skobelev Denis.</span>
-  </div>
-</footer>
-
-
-    <script src="/docs/5.0/dist/js/bootstrap.bundle.min.js" ></script>
-
-
-  </body>
-</html>
+{% endblock %}
