--- a/templates/settings.html
+++ b/templates/settings.html
@@ -16,22 +16,24 @@
              <div class="col-6">
                  <div class="window-ask"></div>
                     <form class="d-flex">
-                      <input class="form-control me-2" type="search" aria-label="Search" value="Some_L04-17">
+                      <input class="form-control me-2" type="search" aria-label="Search" value="Some_L04-17" maxlength="256">
                     </form>
                      <form class="d-flex">
-                      <input class="form-control me-2" type="search" aria-label="Search" value="w.rite_to_me@yandex.ru">
+                      <input class="form-control me-2" type="search" aria-label="Search" value="w.rite_to_me@yandex.ru" maxlength="256">
                     </form>
                     <form class="d-flex">
-                      <input class="form-control me-2" type="search" aria-label="Search" value="Rita Tevo">
+                      <input class="form-control me-2" type="search" aria-label="Search" value="Rita Tevo" maxlength="256">
                     </form>
                      <img src="../static/img/anon.png" alt="Logotype" class="question-image">
                      <p style="margin-right: 10px;"></p>
                      <form class="d-flex">
-                        <input class="form-control me-2" type="search" aria-label="avatar" value="c:\avatar.jpg" style="width: 190px;">
+                        <input class="form-control me-2" type="search" aria-label="avatar" value="c:\avatar.jpg" style="width: 190px;" maxlength="256">
                         <button class="butt-sett" type="submit">choose</button>
                      </form>
                      <p style="margin-right: 10px;"></p>
                      <button class="butt-sett" type="submit">Save</button>
                 </div>
+             </div>
+       </div>
 
 {% endblock %}
