--- a/templates/signup.html
+++ b/templates/signup.html
@@ -2,6 +2,7 @@
 {% load static %}
 {% block content %}
 
+    <div class="col-8">
          <a class="block-title" href ="">Registration</a>
          <p style="margin-right: 10px;"></p>
          <a class="err-title" href ="">Sorry, this email address is already registred!</a>
@@ -18,28 +19,29 @@
              <div class="col-5">
                  <div class="window-ask"></div>
                     <form class="d-flex">
-                      <input class="form-control me-2" type="search" aria-label="Search" placeholder="Some_L04-17">
+                      <input class="form-control me-2" type="search" aria-label="Search" placeholder="Some_L04-17" maxlength="256">
                     </form>
                      <form class="d-flex">
-                      <input class="form-control me-2" type="search" aria-label="Search" placeholder="w.rite_to_me@yandex.ru">
+                      <input class="form-control me-2" type="search" aria-label="Search" placeholder="w.rite_to_me@yandex.ru" maxlength="256">
                     </form>
                     <form class="d-flex">
-                      <input class="form-control me-2" type="search" aria-label="Search" placeholder="Rita Tevo">
+                      <input class="form-control me-2" type="search" aria-label="Search" placeholder="Rita Tevo" maxlength="256">
                     </form>
                     <form class="d-flex">
-                      <input class="form-control me-2" type="search" aria-label="Search" placeholder="**********">
+                      <input class="form-control me-2" type="password" aria-label="Search" placeholder="**********" maxlength="256">
                     </form>
                     <form class="d-flex">
-                      <input class="form-control me-2" type="search" aria-label="Search" placeholder="**********">
+                      <input class="form-control me-2" type="password" aria-label="Search" placeholder="**********" maxlength="256">
                     </form>
                     <p style="margin-right: 10px;"></p>
                      <form class="d-flex">
-                        <input class="form-control me-2" type="search" aria-label="avatar" placeholder="c:\avatar.jpg" style="width: 190px;">
+                        <input class="form-control me-2" type="search" aria-label="avatar" placeholder="c:\avatar.jpg" style="width: 190px;" maxlength="256">
                         <button class="butt-sett" type="submit">choose</button>
                      </form>
                      <p style="margin-right: 10px;"></p>
                      <button class="butt-sett" type="submit">Register!</button>
                 </div>
               </div>
+    </div>
          
 {% endblock %}
