--- a/templates/tag.html
+++ b/templates/tag.html
@@ -4,123 +4,11 @@
 
          <a class="block-title" href ="">Tag:</a>
          <a class="block-title" href ="">Python</a>
-         <div class="row question">
-            <div class="col-3">
-              <img src="{% static '/img/fire.png' %}" alt="" class="question-image">
-                  <div class="buttons">
-                      <button class="image-button" onclick="like(1)">
-                        <img src="{% static '/img/like.png' %}" alt="like" class="like-image">
-                      </button>
-                      <span class="counter">
-                        <p id="count1">0</p>
-                      </span>
-                      <button class="image-button" onclick="dislike(1)">
-                        <img src="{% static '/img/dislike.png' %}" alt="like" class="like-image">
-                      </button>
-                </div>
-              </div>
-              <div class="col-9">
-             <div class="question-title"><a href ="">Just like fire.</a></div>
-             <div class="question-text">Since ancient times, people have used fire in
-               the household for cooking and heating their homes. Nowadays, fire is
-               also used in many industries. Without fire, human life is impossible.
-               But fire is creative only if safety rules are followed. Otherwise, a fire
-               may occur. Especially dangerous are forest fires, which spread with
-               great speed, and fires at industrial enterprises. Therefore, fire should
-               be handled very carefully. If it is even more or less clear with gases
-               (the gas burns, is oxidized by the gas + the required temperature),
-               then plasma is a partially or fully ionized gas formed from neutral atoms
-               (or molecules) and charged particles (ions and electrons).</div>
-             <p style="margin-top: 3px;"></p>
-             <span class="question-text">Tags:</span>
-             <span class="tags-question">
-                   <span class="badge bg-primary">Python</span>
-                   <span class="badge bg-primary">HTML</span>
-                   <span class="badge bg-primary">CSS</span>
-                   <span class="badge bg-primary">Java Script</span>
-             </span>
-           </div>
-            </div>
-         <div class="row question">
-            <div class="col-3">
-              <img src="{% static '/img/grec.png' %}" alt="" class="question-image">
-                  <div class="buttons">
-                      <button class="image-button" onclick="like(2)">
-                        <img src="{% static '/img/like.png' %}" alt="like" class="like-image">
-                      </button>
-                      <span class="counter">
-                        <p id="count2">0</p>
-                      </span>
-                      <button class="image-button" onclick="dislike(2)">
-                        <img src="{% static '/img/dislike.png' %}" alt="like" class="like-image">
-                      </button>
-                </div>
-              </div>
-              <div class="col-9">
-             <div class="question-title"><a href ="">The interesting hystory.</a></div>
-             <div class="question-text">The theory that all objects are made of atoms was
-               first described by the Greek philosophers Democritus and Leucippus.
-               But the modern scientific approach to the structure of matter was first
-               developed by Thales of Miletus and his students. The Latin alphabet originated
-               in ancient Greece, during the Phoenician colonization in the 8th century BC.
-               Early works in the field of physics and engineering were written by Archimedes
-               in the Greek colony in Sicily - Syracuse, as well as many other scientists.
-               Mainland Greece is located on the Balkan Peninsula and is washed by the Mediterranean Sea,
-               which flows into the Ionian Sea in the west and the Aegean Sea in the east.</div>
-             <p style="margin-top: 3px;"></p>
-             <span class="question-text">Tags:</span>
-             <span class="tags-question">
-                   <span class="badge bg-primary">Python</span>
-                   <span class="badge bg-primary">HTML</span>
-                   <span class="badge bg-primary">CSS</span>
-                   <span class="badge bg-primary">Java Script</span>
-             </span>
-           </div>
-            </div>
-         <div class="row question">
-            <div class="col-3">
-              <img src="{% static '/img/dog.png' %}" alt="" class="question-image">
-                  <div class="buttons">
-                      <button class="image-button" onclick="like(3)">
-                        <img src="{% static '/img/like.png' %}" alt="like" class="like-image">
-                      </button>
-                      <span class="counter">
-                        <p id="count3">0</p>
-                      </span>
-                      <button class="image-button" onclick="dislike(3)">
-                        <img src="{% static '/img/dislike.png' %}" alt="like" class="like-image">
-                      </button>
-                </div>
-              </div>
-              <div class="col-9">
-             <div class="question-title"><a href ="">I'm so tired!</a></div>
-             <div class="question-text">Motivation is what gets you to a goal, what keeps you
-               going when things get tough, the reason you get up early to exercise or work
-               late to finish a project. More often than not, positive motivation works better —
-               if you really want something, you'll do a much better job than if you're trying
-               to avoid an undesirable scenario. Thus, motivation is the desire to achieve something.
-               Sometimes you don't want to get up early and feel very sleepy, but if you have
-               a reason to sincerely want to get up early, you jump out of bed with excitement.
-               This type of motivation works best.</div>
-             <p style="margin-top: 3px;"></p>
-             <span class="question-text">Tags:</span>
-             <span class="tags-question">
-                   <span class="badge bg-primary">Python</span>
-                   <span class="badge bg-primary">HTML</span>
-                   <span class="badge bg-primary">CSS</span>
-                   <span class="badge bg-primary">Java Script</span>
-             </span>
-           </div>
-            
 
-  <div class="pagination">
-    <div class="page-buttons">
-      <button class="page-button">1</button>
-      <button class="page-button">2</button>
-      <button class="page-button">3</button>
-      <button class="page-button">...</button>
-      <button class="page-button">53</button>
-    </div>
-  </div>
+{% for question in questions %}
+  {% include 'components/question-item.html' %}
+{% endfor %}
+
+{% include 'components/pagin.html' %}
 
 {% endblock %}
