--- a/templates/components/answer-item.html
+++ b/templates/components/answer-item.html
@@ -7,7 +7,7 @@
                         <img src="{% static '/img/like.png' %}" alt="like" class="like-image">
                       </button>
                       <span class="counter">
-                        <p id="count1">{{ answer.like }}</p>
+                        <p id="count1">{{ answer.total_likes }}</p>
                       </span>
                       <button class="image-button" onclick="dislike(2)">
                         <img src="{% static '/img/dislike.png' %}" alt="like" class="like-image">
