--- a/static/css/main.css
+++ b/static/css/main.css
@@ -228,3 +228,39 @@ main > .container {
     font-weight: lighter;
     color: red;
 }
+
+form {
+    display: flex;
+    flex-direction: column;
+    max-width: 300px; /* Максимальная ширина формы (можете настроить по своему усмотрению) */
+    margin: auto; /* Центрирование формы на странице */
+}
+
+.form-group {
+    margin-bottom: 15px; /* Расстояние между группами полей */
+}
+
+.form-input {
+    width: 300px;
+    font-size: 16px;
+    margin-right: 20px;
+}
+
+.form-label {
+    display: inline-block;
+    min-width: 150px;
+    vertical-align: top;
+    margin-right: 20px;
+    margin-bottom: 5px;
+}
+
+.form-error ul {
+    list-style: none;
+    padding: 0;
+    color: #CC0000;
+}
+
+.form-button {
+    min-width: 200px;
+    font-size: 16px;
+}
