--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -45,16 +45,22 @@
           </button>
         </form>
         <ul class="navbar-nav me-auto mb-2 mb-md-0">
+            {% if request.user.is_authenticated %}
           <div><img src="{% static '/img/anon.png' %}" alt ="" class="name-image"></div>
           <div class="nav-item">
-            <h class="name active" >Rita Tevo</h>
+            <h class="name active" >{{user.username}}</h>
           </div>
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="{% url 'settings' %}">settings</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="{% url 'login' %}">log out</a>
+            <a class="nav-link active" aria-current="page" href="{% url 'logout' %}">log out</a>
           </li>
+            {% else %}
+            <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="{% url 'login' %}">log in</a>
+          </li>
+            {% endif %}
         </ul>
       </div>
     </div>
