--- a/templates/signup.html
+++ b/templates/signup.html
@@ -2,46 +2,34 @@
 {% load static %}
 {% block content %}
 
-    <div class="col-8">
-         <a class="block-title" href ="">Registration</a>
-         <p style="margin-right: 10px;"></p>
-         <a class="err-title" href ="">Sorry, this email address is already registred!</a>
-         <div class="row">
-             <div class="col-3">
-                     <p style="margin-top: 25px;"></p>
-                     <label class="answer-sett">Login:</label>
-                     <label class="answer-sett">Email:</label>
-                     <label class="answer-sett">NickName:</label>
-                     <label class="answer-sett">Password:</label>
-                     <label class="answer-sett">Repeat password:</label>
-                     <label class="answer-sett">Upload avatar:</label>
-             </div>
-             <div class="col-5">
-                 <div class="window-ask"></div>
-                    <form class="d-flex">
-                      <input class="form-control me-2" type="search" aria-label="Search" placeholder="Some_L04-17" maxlength="256">
-                    </form>
-                     <form class="d-flex">
-                      <input class="form-control me-2" type="search" aria-label="Search" placeholder="w.rite_to_me@yandex.ru" maxlength="256">
-                    </form>
-                    <form class="d-flex">
-                      <input class="form-control me-2" type="search" aria-label="Search" placeholder="Rita Tevo" maxlength="256">
-                    </form>
-                    <form class="d-flex">
-                      <input class="form-control me-2" type="password" aria-label="Search" placeholder="**********" maxlength="256">
-                    </form>
-                    <form class="d-flex">
-                      <input class="form-control me-2" type="password" aria-label="Search" placeholder="**********" maxlength="256">
-                    </form>
-                    <p style="margin-right: 10px;"></p>
-                     <form class="d-flex">
-                        <input class="form-control me-2" type="search" aria-label="avatar" placeholder="c:\avatar.jpg" style="width: 190px;" maxlength="256">
-                        <button class="butt-sett" type="submit">choose</button>
-                     </form>
-                     <p style="margin-right: 10px;"></p>
-                     <button class="butt-sett" type="submit">Register!</button>
-                </div>
-              </div>
-    </div>
-         
+<h1>{{ title }}</h1>
+
+<div class="row">
+<div class="col-3">
+<form method="post" class="form">
+    {% csrf_token %}
+
+    {% for f in form %}
+        <div class="form-group">
+            <label class="form-label" for="{{ f.id_for_label }}">{{ f.label }}:</label>
+        </div>
+    {% endfor %}
+</div>
+
+<div class="col-5">
+<form method="post" class="form">
+    {% csrf_token %}
+
+    {% for f in form %}
+        <div class="form-group">
+            {{ f }}
+            <div class="form-error">{{ f.errors }}</div>
+        </div>
+    {% endfor %}
+</div>
+</div>
+
+    <button class="butt-sett" type="submit">Register!</button>
+</form>
+
 {% endblock %}
